Tokens/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> sentencias asignacion
Rule 2     sentencias -> sentencias metodos
Rule 3     sentencias -> sentencias if
Rule 4     sentencias -> sentencias for
Rule 5     sentencias -> sentencias while
Rule 6     sentencias -> asignacion
Rule 7     sentencias -> metodos
Rule 8     sentencias -> if
Rule 9     sentencias -> for
Rule 10    sentencias -> while
Rule 11    for -> FOR LPAREN asignacion comparaciones PUNTOCOMA incremento_decremento RPAREN L_LLAVE sentencias R_LLAVE
Rule 12    while -> WHILE LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
Rule 13    incremento_decremento -> PREINCREMENTO
Rule 14    incremento_decremento -> POSTINCREMENTO
Rule 15    incremento_decremento -> PREDECREMENTO
Rule 16    incremento_decremento -> POSTDECREMENTO
Rule 17    object -> LPAREN OBJECT RPAREN term
Rule 18    metodos -> imprimir
Rule 19    metodos -> object
Rule 20    imprimir -> ECHO factor PUNTOCOMA
Rule 21    imprimir -> ECHO funciones PUNTOCOMA
Rule 22    imprimir -> PRINT LPAREN factor RPAREN PUNTOCOMA
Rule 23    imprimir -> PRINT LPAREN funciones RPAREN PUNTOCOMA
Rule 24    imprimir -> PRINT factor
Rule 25    imprimir -> PRINT funciones
Rule 26    if -> IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
Rule 27    if -> IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE else
Rule 28    if -> IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE elseif else
Rule 29    elseif -> ELSEIF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
Rule 30    elseif -> elseif ELSEIF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
Rule 31    else -> ELSE L_LLAVE sentencias R_LLAVE
Rule 32    asignacion -> VARIABLE IGUAL expresion PUNTOCOMA
Rule 33    asignacion -> VARIABLE IGUAL factor PUNTOCOMA
Rule 34    asignacion -> incremento_decremento PUNTOCOMA
Rule 35    asignacion -> VARIABLE IGUAL funciones PUNTOCOMA
Rule 36    expresion -> expresion operadores term
Rule 37    expresion -> term
Rule 38    operadores -> MAS
Rule 39    operadores -> MENOS
Rule 40    operadores -> PRODUCTO
Rule 41    operadores -> DIVISION
Rule 42    operadores -> MODULO
Rule 43    operadores -> EXPONENCIACION
Rule 44    comparacion -> condiciones
Rule 45    comparacion -> LPAREN condiciones RPAREN
Rule 46    comparacion -> NO LPAREN condiciones RPAREN
Rule 47    condiciones -> factor IGUAL_IGUAL factor
Rule 48    condiciones -> factor IDENTICO factor
Rule 49    condiciones -> factor DISTINTO factor
Rule 50    condiciones -> factor MENORQUE factor
Rule 51    condiciones -> factor MAYORQUE factor
Rule 52    condiciones -> factor MENOROIGUAL factor
Rule 53    condiciones -> factor MAYOROIGUAL factor
Rule 54    comparaciones -> comparacion
Rule 55    comparaciones -> comparaciones anado comparacion
Rule 56    anado -> condicion
Rule 57    condicion -> XOR
Rule 58    condicion -> ANDAND
Rule 59    condicion -> AND
Rule 60    condicion -> OR
Rule 61    condicion -> OROR
Rule 62    term -> factor
Rule 63    factor -> NUMEROS
Rule 64    factor -> DECIMAL
Rule 65    factor -> CADENASIMPLE
Rule 66    factor -> CADENADOBLE
Rule 67    factor -> VARIABLE
Rule 68    factor -> BOOLEAN
Rule 69    factor -> LPAREN expresion RPAREN
Rule 70    fopen -> FOPEN LPAREN CADENADOBLE COMA CADENADOBLE RPAREN
Rule 71    fopen -> FOPEN LPAREN CADENASIMPLE COMA CADENADOBLE RPAREN
Rule 72    fpassthru -> FPASSTHRU LPAREN VARIABLE RPAREN
Rule 73    feof -> FEOF LPAREN VARIABLE RPAREN
Rule 74    fgets -> FGETS LPAREN VARIABLE COMA NUMEROS RPAREN
Rule 75    fgets -> LPAREN VARIABLE RPAREN
Rule 76    nl2br -> NL2BR LPAREN CADENADOBLE COMA VARIABLE RPAREN
Rule 77    nl2br -> NL2BR LPAREN CADENADOBLE COMA BOOLEAN RPAREN
Rule 78    nl2br -> NL2BR LPAREN CADENADOBLE RPAREN
Rule 79    nl2br -> NL2BR LPAREN VARIABLE COMA BOOLEAN RPAREN
Rule 80    nl2br -> NL2BR LPAREN VARIABLE COMA VARIABLE RPAREN
Rule 81    nl2br -> NL2BR LPAREN VARIABLE RPAREN
Rule 82    round -> ROUND LPAREN DECIMAL RPAREN
Rule 83    round -> ROUND LPAREN MENOS DECIMAL RPAREN
Rule 84    round -> ROUND LPAREN DECIMAL COMA NUMEROS RPAREN
Rule 85    round -> ROUND LPAREN DECIMAL COMA MENOS NUMEROS RPAREN
Rule 86    round -> ROUND LPAREN MENOS DECIMAL COMA MENOS NUMEROS RPAREN
Rule 87    round -> ROUND LPAREN MENOS DECIMAL COMA NUMEROS RPAREN
Rule 88    floor -> FLOOR LPAREN DECIMAL RPAREN
Rule 89    floor -> FLOOR LPAREN MENOS DECIMAL RPAREN
Rule 90    floor -> FLOOR LPAREN DECIMAL PRODUCTO NUMEROS RPAREN
Rule 91    floor -> FLOOR LPAREN VARIABLE RPAREN
Rule 92    ceil -> CEIL LPAREN MENOS DECIMAL RPAREN
Rule 93    ceil -> CEIL LPAREN DECIMAL RPAREN
Rule 94    ceil -> CEIL LPAREN VARIABLE RPAREN
Rule 95    ceil -> CEIL LPAREN VARIABLE PRODUCTO NUMEROS RPAREN
Rule 96    fmod -> FMOD LPAREN VARIABLE COMA VARIABLE RPAREN
Rule 97    lista -> LIST LPAREN elements RPAREN
Rule 98    elements -> factor
Rule 99    elements -> element
Rule 100   elements -> elements COMA factor
Rule 101   elements -> elements COMA element
Rule 102   element -> arrays
Rule 103   element -> lista
Rule 104   max -> MAX LPAREN elements RPAREN
Rule 105   arrays -> ARRAY LPAREN elements RPAREN
Rule 106   arrays -> LCORC elements RCORC
Rule 107   min -> MIN LPAREN elements RPAREN
Rule 108   number_format -> NUMBER_FORMAT LPAREN VARIABLE RPAREN
Rule 109   number_format -> NUMBER_FORMAT LPAREN VARIABLE COMA NUMEROS RPAREN
Rule 110   number_format -> NUMBER_FORMAT LPAREN VARIABLE COMA NUMEROS COMA CADENASIMPLE COMA CADENASIMPLE RPAREN
Rule 111   funciones -> trim
Rule 112   funciones -> substr
Rule 113   funciones -> wordwrap
Rule 114   funciones -> fopen
Rule 115   funciones -> fpassthru
Rule 116   funciones -> feof
Rule 117   funciones -> fgets
Rule 118   funciones -> nl2br
Rule 119   funciones -> VARIABLE IGUAL next
Rule 120   funciones -> lista
Rule 121   funciones -> arrays
Rule 122   rand -> RAND LPAREN NUMEROS COMA NUMEROS RPAREN
Rule 123   rand -> RAND LPAREN RPAREN
Rule 124   funciones -> POTENCIA LPAREN NUMEROS COMA NUMEROS RPAREN
Rule 125   funciones -> max
Rule 126   funciones -> min
Rule 127   funciones -> sort
Rule 128   funciones -> count
Rule 129   funciones -> number_format
Rule 130   funciones -> floor
Rule 131   funciones -> round
Rule 132   funciones -> ceil
Rule 133   funciones -> rand
Rule 134   funciones -> fmod
Rule 135   trim -> TRIM LPAREN VARIABLE RPAREN
Rule 136   trim -> TRIM LPAREN VARIABLE COMA CADENADOBLE RPAREN
Rule 137   trim -> TRIM LPAREN VARIABLE COMA CADENASIMPLE RPAREN
Rule 138   substr -> SUBSTR LPAREN VARIABLE COMA NUMEROS COMA NUMEROS RPAREN
Rule 139   substr -> SUBSTR LPAREN CADENADOBLE COMA NUMEROS COMA NUMEROS RPAREN
Rule 140   substr -> SUBSTR LPAREN VARIABLE COMA NUMEROS RPAREN
Rule 141   substr -> SUBSTR LPAREN CADENADOBLE COMA NUMEROS RPAREN
Rule 142   wordwrap -> WORDWRAP LPAREN VARIABLE COMA NUMEROS COMA CADENADOBLE COMA BOOLEAN RPAREN
Rule 143   sort -> SORT LPAREN VARIABLE RPAREN
Rule 144   sort -> SORT LPAREN VARIABLE COMA FLAG RPAREN
Rule 145   count -> COUNT LPAREN VARIABLE RPAREN
Rule 146   next -> NEXT LPAREN VARIABLE RPAREN
Rule 147   funciones -> getclass
Rule 148   funciones -> is_a
Rule 149   getclass -> GETCLASS LPAREN VARIABLE RPAREN
Rule 150   is_a -> IS_A LPAREN VARIABLE COMA CADENADOBLE RPAREN

Terminals, with rules where they appear

AND                  : 59
ANDAND               : 58
ARRAY                : 105
BOOLEAN              : 68 77 79 142
CADENADOBLE          : 66 70 70 71 76 77 78 136 139 141 142 150
CADENASIMPLE         : 65 71 110 110 137
CEIL                 : 92 93 94 95
COMA                 : 70 71 74 76 77 79 80 84 85 86 87 96 100 101 109 110 110 110 122 124 136 137 138 138 139 139 140 141 142 142 142 144 150
COUNT                : 145
DECIMAL              : 64 82 83 84 85 86 87 88 89 90 92 93
DISTINTO             : 49
DIVISION             : 41
ECHO                 : 20 21
ELSE                 : 31
ELSEIF               : 29 30
EXPONENCIACION       : 43
FEOF                 : 73
FGETS                : 74
FLAG                 : 144
FLOOR                : 88 89 90 91
FMOD                 : 96
FOPEN                : 70 71
FOR                  : 11
FPASSTHRU            : 72
GETCLASS             : 149
IDENTICO             : 48
IF                   : 26 27 28
IGUAL                : 32 33 35 119
IGUAL_IGUAL          : 47
IS_A                 : 150
LCORC                : 106
LIST                 : 97
LPAREN               : 11 12 17 22 23 26 27 28 29 30 45 46 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 104 105 107 108 109 110 122 123 124 135 136 137 138 139 140 141 142 143 144 145 146 149 150
L_LLAVE              : 11 12 26 27 28 29 30 31
MAS                  : 38
MAX                  : 104
MAYOROIGUAL          : 53
MAYORQUE             : 51
MENOROIGUAL          : 52
MENORQUE             : 50
MENOS                : 39 83 85 86 86 87 89 92
MIN                  : 107
MODULO               : 42
NEXT                 : 146
NL2BR                : 76 77 78 79 80 81
NO                   : 46
NUMBER_FORMAT        : 108 109 110
NUMEROS              : 63 74 84 85 86 87 90 95 109 110 122 122 124 124 138 138 139 139 140 141 142
OBJECT               : 17
OR                   : 60
OROR                 : 61
POSTDECREMENTO       : 16
POSTINCREMENTO       : 14
POTENCIA             : 124
PREDECREMENTO        : 15
PREINCREMENTO        : 13
PRINT                : 22 23 24 25
PRODUCTO             : 40 90 95
PUNTOCOMA            : 11 20 21 22 23 32 33 34 35
RAND                 : 122 123
RCORC                : 106
ROUND                : 82 83 84 85 86 87
RPAREN               : 11 12 17 22 23 26 27 28 29 30 45 46 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 104 105 107 108 109 110 122 123 124 135 136 137 138 139 140 141 142 143 144 145 146 149 150
R_LLAVE              : 11 12 26 27 28 29 30 31
SORT                 : 143 144
SUBSTR               : 138 139 140 141
TRIM                 : 135 136 137
VARIABLE             : 32 33 35 67 72 73 74 75 76 79 80 80 81 91 94 95 96 96 108 109 110 119 135 136 137 138 140 142 143 144 145 146 149 150
WHILE                : 12
WORDWRAP             : 142
XOR                  : 57
error                : 

Nonterminals, with rules where they appear

anado                : 55
arrays               : 102 121
asignacion           : 1 6 11
ceil                 : 132
comparacion          : 54 55
comparaciones        : 11 12 26 27 28 29 30 55
condicion            : 56
condiciones          : 44 45 46
count                : 128
element              : 99 101
elements             : 97 100 101 104 105 106 107
else                 : 27 28
elseif               : 28 30
expresion            : 32 36 69
factor               : 20 22 24 33 47 47 48 48 49 49 50 50 51 51 52 52 53 53 62 98 100
feof                 : 116
fgets                : 117
floor                : 130
fmod                 : 134
fopen                : 114
for                  : 4 9
fpassthru            : 115
funciones            : 21 23 25 35
getclass             : 147
if                   : 3 8
imprimir             : 18
incremento_decremento : 11 34
is_a                 : 148
lista                : 103 120
max                  : 125
metodos              : 2 7
min                  : 126
next                 : 119
nl2br                : 118
number_format        : 129
object               : 19
operadores           : 36
rand                 : 133
round                : 131
sentencias           : 1 2 3 4 5 11 12 26 27 28 29 30 31 0
sort                 : 127
substr               : 112
term                 : 17 36 37
trim                 : 111
while                : 5 10
wordwrap             : 113

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . sentencias asignacion
    (2) sentencias -> . sentencias metodos
    (3) sentencias -> . sentencias if
    (4) sentencias -> . sentencias for
    (5) sentencias -> . sentencias while
    (6) sentencias -> . asignacion
    (7) sentencias -> . metodos
    (8) sentencias -> . if
    (9) sentencias -> . for
    (10) sentencias -> . while
    (32) asignacion -> . VARIABLE IGUAL expresion PUNTOCOMA
    (33) asignacion -> . VARIABLE IGUAL factor PUNTOCOMA
    (34) asignacion -> . incremento_decremento PUNTOCOMA
    (35) asignacion -> . VARIABLE IGUAL funciones PUNTOCOMA
    (18) metodos -> . imprimir
    (19) metodos -> . object
    (26) if -> . IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
    (27) if -> . IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE else
    (28) if -> . IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE elseif else
    (11) for -> . FOR LPAREN asignacion comparaciones PUNTOCOMA incremento_decremento RPAREN L_LLAVE sentencias R_LLAVE
    (12) while -> . WHILE LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
    (13) incremento_decremento -> . PREINCREMENTO
    (14) incremento_decremento -> . POSTINCREMENTO
    (15) incremento_decremento -> . PREDECREMENTO
    (16) incremento_decremento -> . POSTDECREMENTO
    (20) imprimir -> . ECHO factor PUNTOCOMA
    (21) imprimir -> . ECHO funciones PUNTOCOMA
    (22) imprimir -> . PRINT LPAREN factor RPAREN PUNTOCOMA
    (23) imprimir -> . PRINT LPAREN funciones RPAREN PUNTOCOMA
    (24) imprimir -> . PRINT factor
    (25) imprimir -> . PRINT funciones
    (17) object -> . LPAREN OBJECT RPAREN term

    VARIABLE        shift and go to state 7
    IF              shift and go to state 11
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    PREINCREMENTO   shift and go to state 15
    POSTINCREMENTO  shift and go to state 16
    PREDECREMENTO   shift and go to state 17
    POSTDECREMENTO  shift and go to state 18
    ECHO            shift and go to state 19
    PRINT           shift and go to state 20
    LPAREN          shift and go to state 12

    sentencias                     shift and go to state 1
    asignacion                     shift and go to state 2
    metodos                        shift and go to state 3
    if                             shift and go to state 4
    for                            shift and go to state 5
    while                          shift and go to state 6
    incremento_decremento          shift and go to state 8
    imprimir                       shift and go to state 9
    object                         shift and go to state 10

state 1

    (0) S' -> sentencias .
    (1) sentencias -> sentencias . asignacion
    (2) sentencias -> sentencias . metodos
    (3) sentencias -> sentencias . if
    (4) sentencias -> sentencias . for
    (5) sentencias -> sentencias . while
    (32) asignacion -> . VARIABLE IGUAL expresion PUNTOCOMA
    (33) asignacion -> . VARIABLE IGUAL factor PUNTOCOMA
    (34) asignacion -> . incremento_decremento PUNTOCOMA
    (35) asignacion -> . VARIABLE IGUAL funciones PUNTOCOMA
    (18) metodos -> . imprimir
    (19) metodos -> . object
    (26) if -> . IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
    (27) if -> . IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE else
    (28) if -> . IF LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE elseif else
    (11) for -> . FOR LPAREN asignacion comparaciones PUNTOCOMA incremento_decremento RPAREN L_LLAVE sentencias R_LLAVE
    (12) while -> . WHILE LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
    (13) incremento_decremento -> . PREINCREMENTO
    (14) incremento_decremento -> . POSTINCREMENTO
    (15) incremento_decremento -> . PREDECREMENTO
    (16) incremento_decremento -> . POSTDECREMENTO
    (20) imprimir -> . ECHO factor PUNTOCOMA
    (21) imprimir -> . ECHO funciones PUNTOCOMA
    (22) imprimir -> . PRINT LPAREN factor RPAREN PUNTOCOMA
    (23) imprimir -> . PRINT LPAREN funciones RPAREN PUNTOCOMA
    (24) imprimir -> . PRINT factor
    (25) imprimir -> . PRINT funciones
    (17) object -> . LPAREN OBJECT RPAREN term

    VARIABLE        shift and go to state 7
    IF              shift and go to state 11
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    PREINCREMENTO   shift and go to state 15
    POSTINCREMENTO  shift and go to state 16
    PREDECREMENTO   shift and go to state 17
    POSTDECREMENTO  shift and go to state 18
    ECHO            shift and go to state 19
    PRINT           shift and go to state 20
    LPAREN          shift and go to state 12

    asignacion                     shift and go to state 21
    metodos                        shift and go to state 22
    if                             shift and go to state 23
    for                            shift and go to state 24
    while                          shift and go to state 25
    incremento_decremento          shift and go to state 8
    imprimir                       shift and go to state 9
    object                         shift and go to state 10

state 2

    (6) sentencias -> asignacion .

    VARIABLE        reduce using rule 6 (sentencias -> asignacion .)
    IF              reduce using rule 6 (sentencias -> asignacion .)
    FOR             reduce using rule 6 (sentencias -> asignacion .)
    WHILE           reduce using rule 6 (sentencias -> asignacion .)
    PREINCREMENTO   reduce using rule 6 (sentencias -> asignacion .)
    POSTINCREMENTO  reduce using rule 6 (sentencias -> asignacion .)
    PREDECREMENTO   reduce using rule 6 (sentencias -> asignacion .)
    POSTDECREMENTO  reduce using rule 6 (sentencias -> asignacion .)
    ECHO            reduce using rule 6 (sentencias -> asignacion .)
    PRINT           reduce using rule 6 (sentencias -> asignacion .)
    LPAREN          reduce using rule 6 (sentencias -> asignacion .)
    $end            reduce using rule 6 (sentencias -> asignacion .)
    R_LLAVE         reduce using rule 6 (sentencias -> asignacion .)


state 3

    (7) sentencias -> metodos .

    VARIABLE        reduce using rule 7 (sentencias -> metodos .)
    IF              reduce using rule 7 (sentencias -> metodos .)
    FOR             reduce using rule 7 (sentencias -> metodos .)
    WHILE           reduce using rule 7 (sentencias -> metodos .)
    PREINCREMENTO   reduce using rule 7 (sentencias -> metodos .)
    POSTINCREMENTO  reduce using rule 7 (sentencias -> metodos .)
    PREDECREMENTO   reduce using rule 7 (sentencias -> metodos .)
    POSTDECREMENTO  reduce using rule 7 (sentencias -> metodos .)
    ECHO            reduce using rule 7 (sentencias -> metodos .)
    PRINT           reduce using rule 7 (sentencias -> metodos .)
    LPAREN          reduce using rule 7 (sentencias -> metodos .)
    $end            reduce using rule 7 (sentencias -> metodos .)
    R_LLAVE         reduce using rule 7 (sentencias -> metodos .)


state 4

    (8) sentencias -> if .

    VARIABLE        reduce using rule 8 (sentencias -> if .)
    IF              reduce using rule 8 (sentencias -> if .)
    FOR             reduce using rule 8 (sentencias -> if .)
    WHILE           reduce using rule 8 (sentencias -> if .)
    PREINCREMENTO   reduce using rule 8 (sentencias -> if .)
    POSTINCREMENTO  reduce using rule 8 (sentencias -> if .)
    PREDECREMENTO   reduce using rule 8 (sentencias -> if .)
    POSTDECREMENTO  reduce using rule 8 (sentencias -> if .)
    ECHO            reduce using rule 8 (sentencias -> if .)
    PRINT           reduce using rule 8 (sentencias -> if .)
    LPAREN          reduce using rule 8 (sentencias -> if .)
    $end            reduce using rule 8 (sentencias -> if .)
    R_LLAVE         reduce using rule 8 (sentencias -> if .)


state 5

    (9) sentencias -> for .

    VARIABLE        reduce using rule 9 (sentencias -> for .)
    IF              reduce using rule 9 (sentencias -> for .)
    FOR             reduce using rule 9 (sentencias -> for .)
    WHILE           reduce using rule 9 (sentencias -> for .)
    PREINCREMENTO   reduce using rule 9 (sentencias -> for .)
    POSTINCREMENTO  reduce using rule 9 (sentencias -> for .)
    PREDECREMENTO   reduce using rule 9 (sentencias -> for .)
    POSTDECREMENTO  reduce using rule 9 (sentencias -> for .)
    ECHO            reduce using rule 9 (sentencias -> for .)
    PRINT           reduce using rule 9 (sentencias -> for .)
    LPAREN          reduce using rule 9 (sentencias -> for .)
    $end            reduce using rule 9 (sentencias -> for .)
    R_LLAVE         reduce using rule 9 (sentencias -> for .)


state 6

    (10) sentencias -> while .

    VARIABLE        reduce using rule 10 (sentencias -> while .)
    IF              reduce using rule 10 (sentencias -> while .)
    FOR             reduce using rule 10 (sentencias -> while .)
    WHILE           reduce using rule 10 (sentencias -> while .)
    PREINCREMENTO   reduce using rule 10 (sentencias -> while .)
    POSTINCREMENTO  reduce using rule 10 (sentencias -> while .)
    PREDECREMENTO   reduce using rule 10 (sentencias -> while .)
    POSTDECREMENTO  reduce using rule 10 (sentencias -> while .)
    ECHO            reduce using rule 10 (sentencias -> while .)
    PRINT           reduce using rule 10 (sentencias -> while .)
    LPAREN          reduce using rule 10 (sentencias -> while .)
    $end            reduce using rule 10 (sentencias -> while .)
    R_LLAVE         reduce using rule 10 (sentencias -> while .)


state 7

    (32) asignacion -> VARIABLE . IGUAL expresion PUNTOCOMA
    (33) asignacion -> VARIABLE . IGUAL factor PUNTOCOMA
    (35) asignacion -> VARIABLE . IGUAL funciones PUNTOCOMA

    IGUAL           shift and go to state 26


state 8

    (34) asignacion -> incremento_decremento . PUNTOCOMA

    PUNTOCOMA       shift and go to state 27


state 9

    (18) metodos -> imprimir .

    VARIABLE        reduce using rule 18 (metodos -> imprimir .)
    IF              reduce using rule 18 (metodos -> imprimir .)
    FOR             reduce using rule 18 (metodos -> imprimir .)
    WHILE           reduce using rule 18 (metodos -> imprimir .)
    PREINCREMENTO   reduce using rule 18 (metodos -> imprimir .)
    POSTINCREMENTO  reduce using rule 18 (metodos -> imprimir .)
    PREDECREMENTO   reduce using rule 18 (metodos -> imprimir .)
    POSTDECREMENTO  reduce using rule 18 (metodos -> imprimir .)
    ECHO            reduce using rule 18 (metodos -> imprimir .)
    PRINT           reduce using rule 18 (metodos -> imprimir .)
    LPAREN          reduce using rule 18 (metodos -> imprimir .)
    $end            reduce using rule 18 (metodos -> imprimir .)
    R_LLAVE         reduce using rule 18 (metodos -> imprimir .)


state 10

    (19) metodos -> object .

    VARIABLE        reduce using rule 19 (metodos -> object .)
    IF              reduce using rule 19 (metodos -> object .)
    FOR             reduce using rule 19 (metodos -> object .)
    WHILE           reduce using rule 19 (metodos -> object .)
    PREINCREMENTO   reduce using rule 19 (metodos -> object .)
    POSTINCREMENTO  reduce using rule 19 (metodos -> object .)
    PREDECREMENTO   reduce using rule 19 (metodos -> object .)
    POSTDECREMENTO  reduce using rule 19 (metodos -> object .)
    ECHO            reduce using rule 19 (metodos -> object .)
    PRINT           reduce using rule 19 (metodos -> object .)
    LPAREN          reduce using rule 19 (metodos -> object .)
    $end            reduce using rule 19 (metodos -> object .)
    R_LLAVE         reduce using rule 19 (metodos -> object .)


state 11

    (26) if -> IF . LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE
    (27) if -> IF . LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE else
    (28) if -> IF . LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE elseif else

    LPAREN          shift and go to state 28


state 12

    (17) object -> LPAREN . OBJECT RPAREN term

    OBJECT          shift and go to state 29


state 13

    (11) for -> FOR . LPAREN asignacion comparaciones PUNTOCOMA incremento_decremento RPAREN L_LLAVE sentencias R_LLAVE

    LPAREN          shift and go to state 30


state 14

    (12) while -> WHILE . LPAREN comparaciones RPAREN L_LLAVE sentencias R_LLAVE

    LPAREN          shift and go to state 31


state 15

    (13) incremento_decremento -> PREINCREMENTO .

    PUNTOCOMA       reduce using rule 13 (incremento_decremento -> PREINCREMENTO .)
    RPAREN          reduce using rule 13 (incremento_decremento -> PREINCREMENTO .)


state 16

    (14) incremento_decremento -> POSTINCREMENTO .

    PUNTOCOMA       reduce using rule 14 (incremento_decremento -> POSTINCREMENTO .)
    RPAREN          reduce using rule 14 (incremento_decremento -> POSTINCREMENTO .)


state 17

    (15) incremento_decremento -> PREDECREMENTO .

    PUNTOCOMA       reduce using rule 15 (incremento_decremento -> PREDECREMENTO .)
    RPAREN          reduce using rule 15 (incremento_decremento -> PREDECREMENTO .)


state 18

    (16) incremento_decremento -> POSTDECREMENTO .

    PUNTOCOMA       reduce using rule 16 (incremento_decremento -> POSTDECREMENTO .)
    RPAREN          reduce using rule 16 (incremento_decremento -> POSTDECREMENTO .)


state 19

    (20) imprimir -> ECHO . factor PUNTOCOMA
    (21) imprimir -> ECHO . funciones PUNTOCOMA
    (63) factor -> . NUMEROS
    (64) factor -> . DECIMAL
    (65) factor -> . CADENASIMPLE
    (66) factor -> . CADENADOBLE
    (67) factor -> . VARIABLE
    (68) factor -> . BOOLEAN
    (69) factor -> . LPAREN expresion RPAREN
    (111) funciones -> . trim
    (112) funciones -> . substr
    (113) funciones -> . wordwrap
    (114) funciones -> . fopen
    (115) funciones -> . fpassthru
    (116) funciones -> . feof
    (117) funciones -> . fgets
    (118) funciones -> . nl2br
    (119) funciones -> . VARIABLE IGUAL next
    (120) funciones -> . lista
    (121) funciones -> . arrays
    (124) funciones -> . POTENCIA LPAREN NUMEROS COMA NUMEROS RPAREN
    (125) funciones -> . max
    (126) funciones -> . min
    (127) funciones -> . sort
    (128) funciones -> . count
    (129) funciones -> . number_format
    (130) funciones -> . floor
    (131) funciones -> . round
    (132) funciones -> . ceil
    (133) funciones -> . rand
    (134) funciones -> . fmod
    (147) funciones -> . getclass
    (148) funciones -> . is_a
    (135) trim -> . TRIM LPAREN VARIABLE RPAREN
    (136) trim -> . TRIM LPAREN VARIABLE COMA CADENADOBLE RPAREN
    (137) trim -> . TRIM LPAREN VARIABLE COMA CADENASIMPLE RPAREN
    (138) substr -> . SUBSTR LPAREN VARIABLE COMA NUMEROS COMA NUMEROS RPAREN
    (139) substr -> . SUBSTR LPAREN CADENADOBLE COMA NUMEROS COMA NUMEROS RPAREN
    (140) substr -> . SUBSTR LPAREN VARIABLE COMA NUMEROS RPAREN
    (141) substr -> . SUBSTR LPAREN CADENADOBLE COMA NUMEROS RPAREN
    (142) wordwrap -> . WORDWRAP LPAREN VARIABLE COMA NUMEROS COMA CADENADOBLE COMA BOOLEAN RPAREN
    (70) fopen -> . FOPEN LPAREN CADENADOBLE COMA CADENADOBLE RPAREN
    (71) fopen -> . FOPEN LPAREN CADENASIMPLE COMA CADENADOBLE RPAREN
    (72) fpassthru -> . FPASSTHRU LPAREN VARIABLE RPAREN
    (73) feof -> . FEOF LPAREN VARIABLE RPAREN
    (74) fgets -> . FGETS LPAREN VARIABLE COMA NUMEROS RPAREN
    (75) fgets -> . LPAREN VARIABLE RPAREN
    (76) nl2br -> . NL2BR LPAREN CADENADOBLE COMA VARIABLE RPAREN
    (77) nl2br -> . NL2BR LPAREN CADENADOBLE COMA BOOLEAN RPAREN
    (78) nl2br -> . NL2BR LPAREN CADENADOBLE RPAREN
    (79) nl2br -> . NL2BR LPAREN VARIABLE COMA BOOLEAN RPAREN
    (80) nl2br -> . NL2BR LPAREN VARIABLE COMA VARIABLE RPAREN
    (81) nl2br -> . NL2BR LPAREN VARIABLE RPAREN
    (97) lista -> . LIST LPAREN elements RPAREN
    (105) arrays -> . ARRAY LPAREN elements RPAREN
    (106) arrays -> . LCORC elements RCORC
    (104) max -> . MAX LPAREN elements RPAREN
    (107) min -> . MIN LPAREN elements RPAREN
    (143) sort -> . SORT LPAREN VARIABLE RPAREN
    (144) sort -> . SORT LPAREN VARIABLE COMA FLAG RPAREN
    (145) count -> . COUNT LPAREN VARIABLE RPAREN
    (108) number_format -> . NUMBER_FORMAT LPAREN VARIABLE RPAREN
    (109) number_format -> . NUMBER_FORMAT LPAREN VARIABLE COMA NUMEROS RPAREN
    (110) number_format -> . NUMBER_FORMAT LPAREN VARIABLE COMA NUMEROS COMA CADENASIMPLE COMA CADENASIMPLE RPAREN
    (88) floor -> . FLOOR LPAREN DECIMAL RPAREN
    (89) floor -> . FLOOR LPAREN MENOS DECIMAL RPAREN
    (90) floor -> . FLOOR LPAREN DECIMAL PRODUCTO NUMEROS RPAREN
    (91) floor -> . FLOOR LPAREN VARIABLE RPAREN
    (82) round -> . ROUND LPAREN DECIMAL RPAREN
    (83) round -> . ROUND LPAREN MENOS DECIMAL RPAREN
    (84) round -> . ROUND LPAREN DECIMAL COMA NUMEROS RPAREN
    (85) round -> . ROUND LPAREN DECIMAL COMA MENOS NUMEROS RPAREN
    (86) round -> . ROUND LPAREN MENOS DECIMAL COMA MENOS NUMEROS RPAREN
    (87) round -> . ROUND LPAREN MENOS DECIMAL COMA NUMEROS RPAREN
    (92) ceil -> . CEIL LPAREN MENOS DECIMAL RPAREN
    (93) ceil -> . CEIL LPAREN DECIMAL RPAREN
    (94) ceil -> . CEIL LPAREN VARIABLE RPAREN
    (95) ceil -> . CEIL LPAREN VARIABLE PRODUCTO NUMEROS RPAREN
    (122) rand -> . RAND LPAREN NUMEROS COMA NUMEROS RPAREN
    (123) rand -> . RAND LPAREN RPAREN
    (96) fmod -> . FMOD LPAREN VARIABLE COMA VARIABLE RPAREN
    (149) getclass -> . GETCLASS LPAREN VARIABLE RPAREN
    (150) is_a -> . IS_A LPAREN VARIABLE COMA CADENADOBLE RPAREN
